// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "scene": "",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "foo": "bar",
        },
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/",
        "scene": "",
        "search": "",
        "url": "/",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {
    "foo": "bar",
  },
  "type": "SECOND",
}
`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/",
      Object {},
      "345678",
    ],
    Array [
      "/second",
      Object {
        "foo": "bar",
      },
      "345678",
    ],
  ],
  "index": 1,
}
`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "scene": "",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "foo": "bar",
        },
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/",
        "scene": "",
        "search": "",
        "url": "/",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - title 1`] = `"SECOND"`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"push","args":["/second",{"foo":"bar"}]}} - windowLocation 1`] = `"/second"`;
